WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314689
[LegacySVG] SVGGeometryElement.isPointInStroke() ignores 'vector-effect: non-scaling-stroke'
https://bugs.webkit.org/show_bug.cgi?id=314689
Summary
[LegacySVG] SVGGeometryElement.isPointInStroke() ignores 'vector-effect: non-...
Ahmad Saleem
Reported
2026-05-12 17:33:44 PDT
ssia
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-05-12 17:33:52 PDT
<
rdar://problem/176931749
>
Ahmad Saleem
Comment 2
2026-05-12 17:35:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64800
EWS
Comment 3
2026-05-27 07:49:37 PDT
Committed
313967@main
(662cd4ef59c3): <
https://commits.webkit.org/313967@main
> Reviewed commits have been landed. Closing PR #64800 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug